--- a/INDEX.html
+++ b/INDEX.html
@@ -1,22 +1,170 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <link href="estilo.css" rel="stylesheet" />
-  <title>Turismo</title>
-</head>
-<body>
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Ultra' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Animating Symbols</title>
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 10px;
+        padding: 10px;
+      }
+      #map-canvas {
+        border-style: solid;
+        border-width: 8px;
+
+      }
+      body{
+        background-color: rgb(74,74,74);
+      }
+      h1{
+        text-align: center;
+        margin: 1em 0 0.5em 0;
+        color: rgb(241,240,235);
+        font-weight: normal;
+        font-family: 'Ultra', serif;   
+        font-size: 36px;
+        line-height: 42px;
+        text-transform: uppercase;
+        text-shadow: 0 2px black, 0 3px #777 ;
+      }
+
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.expsigned_in=true"></script>
+    <script type="text/javascript" src="coordenadas.js"></script>
+    <script>
+// This example adds an animated symbol to a polyline.
+
+var line;
+var lineArray=[];
+
+function initialize() {
+  var mapOptions = {
+    center: new google.maps.LatLng(58.4134304,-75.283542),
+    zoom:2.8,
+    minZoom:2.8,
+    streetViewControl:false,
+    panControl:false,
+    overviewMapControl:false,
+    mapTypeControl:false,
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  };
+
+  var map = new google.maps.Map(document.getElementById('map-canvas'),
+      mapOptions);
+
+  var lineCoordinatesArray = [];
+
+  for (var i = coordenadas.length - 1; i >= 0; i--) {
+    lineCoordinatesArray[i] = [
+      new google.maps.LatLng(coordenadas[i][0],coordenadas[i][1]),new google.maps.LatLng(coordenadas[i][2],coordenadas[i][3])
+      
+    ];
+    
+  };
+
+  // var lineCoordinates = [
+  //   new google.maps.LatLng(-3.1372843,-32.9660223),
+  //   new google.maps.LatLng(23.9088854,6.4089788)
+  // ];
+
+  // Define the symbol, using one of the predefined paths ('CIRCLE')
+  // supplied by the Google Maps JavaScript API.
+  // var lineSymbol = {
+  //   path: google.maps.SymbolPath.CIRCLE,
+  //   scale: 8,
+  //   strokeColor: '#393'
+  // };
+  // var lineSymbol2 = {
+  //   path: google.maps.SymbolPath.CIRCLE,
+  //   scale: 5,
+  //   strokeColor: '#393'
+  // };
+
+  for (var i = lineCoordinatesArray.length - 1; i >= 0; i--) {
+    lineArray[i] = new google.maps.Polyline({
+        path: lineCoordinatesArray[i],
+        strokeColor: '#4A4A4A',
+        icons: [
+          {
+            icon: {
+              path: google.maps.SymbolPath.CIRCLE,
+              scale: coordenadas[i][4]*5,
+              strokeColor: '#EB4E4E'
+            },
+            offset: '100%'
+          },
+          {
+            icon: {
+              path: google.maps.SymbolPath.CIRCLE,
+              scale: coordenadas[i][5]*5,
+              strokeColor: '#E8A434'
+            },
+            offset: '0%'
+          }
+        ],
+        map: map
+      });
+  };
+
+  // Create the polyline and add the symbol to it via the 'icons' property.
+  // line = new google.maps.Polyline({
+  //   path: lineCoordinates,
+  //   icons: [{
+  //     icon: lineSymbol,
+  //     offset: '100%'
+  //   },
+  //   {
+  //     icon: lineSymbol2,
+  //     offset: '100%'
+  //   }],
+  //   map: map
+  // });
+
+  animateCircle();
+}
+
+// Use the DOM setInterval() function to change the offset of the symbol
+// at fixed intervals.
+function animateCircle() {
+    var countArray = [];
+    var iconsArray = [];
+    for (var i = coordenadas.length - 1; i >= 0; i--) {
+      countArray[i]=0;
+    };
+    // count = 0;
+    window.setInterval(function() {
+      // count = (count + 5) % 200;
+      // var icons = line.get('icons');
+      // icons[0].offset = (count / 2) + '%';
+      for (var i = coordenadas.length - 1; i >= 0; i--) {
+        countArray[i] = (countArray[i] + 0.5 ) % 200;
+        iconsArray[i] = lineArray[i].get('icons');
+        iconsArray[i][0].offset = (countArray[i] / 2) + '%';
+        iconsArray[i][1].offset = (100-(countArray[i] / 2)) + '%';
+        lineArray[i].set('icons', iconsArray[i]);
+        // lineArray[i].set('icons', icons);
+      };
+      // count = (count + 5) % 200;
+      // var icons = line.get('icons');
+      // icons[0].offset = (count / 2) + '%';
+      // line.set('icons', icons);
+  }, 20);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+  </head>
+  <body>
     <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="2011.html" title="2011">2011</a></li>
-        <li><a href="2012.html" title="2012">2012</a></li>
-        <li><a href="2013.html" title="2013">2013</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section>
-  <img id= "imagen" src="mapa.jpg" alt="Mapa"/>
-  </section>
-</body>
+    <h1>Viajes hacia y desde Chile</h1>  
+    </header>
+    <section>
+    <p>El tamaño de el circulo en el mapa representa la cantidad de personas que viajan desde el pais de origen por la poblacion total de ese pais<p>  
+    </section>
+    <div class="mapa" id="map-canvas"></div>
+  </body>
 </html>
