--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.expsigned_in=true"></script>
     <script type="text/javascript" src="coordenadas.js"></script>
-    <script type="text/jvascript">
+    <script type="text/javascript">
 // This example adds an animated symbol to a polyline.
 
 var line;
