--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Ultra' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ultra' 
+    rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Animating Symbols</title>
+    <title>Viajes hacia y desde Chile</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
         margin: 10px;
+        margin-bottom:20px; 
         padding: 10px;
+        /*padding-bottom: 50px;*/ 
       }
       #map-canvas {
         border-style: solid;
@@ -30,11 +34,35 @@
         text-transform: uppercase;
         text-shadow: 0 2px black, 0 3px #777 ;
       }
+      .explicacion {
+        margin-left: 12px;
+        color: rgb(220,220,220);
+        font-weight: normal;
+        font-size: 22px;
+        line-height: 40px;
+        font-family: 'Orienta', sans-serif;
+/*        margin: 1em 0 0.5em 0;
+        color: rgb(241,240,235);
+        font-size: 22px;
+        line-height: 40px;
+        font-weight: normal;
+        text-transform: uppercase;
+        font-family: 'Orienta', sans-serif;
+        letter-spacing: 1px;
+        font-style: italic;*/
+      }
+      footer {
+        color: rgb(220,220,220);
+        font-family: 'Orienta', sans-serif;
+        margin-left: 12px;
+        margin-bottom: 10px;
+      }
+
 
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.expsigned_in=true"></script>
     <script type="text/javascript" src="coordenadas.js"></script>
-    <script>
+    <script type="text/jvascript">
 // This example adds an animated symbol to a polyline.
 
 var line;
@@ -49,6 +77,7 @@ function initialize() {
     panControl:false,
     overviewMapControl:false,
     mapTypeControl:false,
+    scrollwheel: false,
     mapTypeId: google.maps.MapTypeId.ROADMAP
   };
 
@@ -87,12 +116,27 @@ function initialize() {
     lineArray[i] = new google.maps.Polyline({
         path: lineCoordinatesArray[i],
         strokeColor: '#4A4A4A',
+        strokeWeight:2.8,
+        strokeOpacity:0.4,
         icons: [
+
+        /*var polyOptions = {geodesic:true};
+        var polyline = new GPolyline([
+          new GLatLng(61.1699849, -149.944496),
+          new GLatLng(46.2361, -63.13)
+          ], "#ff0000", 3, 1, polyOptions);
+        map.addOverlay(polyline);*/
+
+
+
           {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
               scale: coordenadas[i][4]*5,
-              strokeColor: '#EB4E4E'
+              fillOpacity:1,
+              strokeOpacity:1,
+              strokeColor: '#EB4E4E',
+              fillColor:'#EB4E4E'
             },
             offset: '100%'
           },
@@ -100,6 +144,9 @@ function initialize() {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
               scale: coordenadas[i][5]*5,
+              fillOpacity:1,
+              strokeOpacity:1,
+              fillColor:'#E8A434',
               strokeColor: '#E8A434'
             },
             offset: '0%'
@@ -140,7 +187,7 @@ function animateCircle() {
       // var icons = line.get('icons');
       // icons[0].offset = (count / 2) + '%';
       for (var i = coordenadas.length - 1; i >= 0; i--) {
-        countArray[i] = (countArray[i] + 0.5 ) % 200;
+        countArray[i] = (countArray[i] + 0.3 ) % 200;
         iconsArray[i] = lineArray[i].get('icons');
         iconsArray[i][0].offset = (countArray[i] / 2) + '%';
         iconsArray[i][1].offset = (100-(countArray[i] / 2)) + '%';
@@ -163,8 +210,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <h1>Viajes hacia y desde Chile</h1>  
     </header>
     <section>
-    <p>El tamaño de el circulo en el mapa representa la cantidad de personas que viajan desde el pais de origen por la poblacion total de ese pais<p>  
+    <p class="explicacion">El tamaño de el circulo en el mapa representa la cantidad de personas que viajan desde el pais de origen por la poblacion total de ese pais<p>  
     </section>
     <div class="mapa" id="map-canvas"></div>
+    <footer> Los datos utilizados para hacer este grafico son del año 2011
+    </footer>
   </body>
 </html>
