--- a/norteamerica.html
+++ b/norteamerica.html
@@ -61,8 +61,8 @@
 
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.expsigned_in=true"></script>
-    <script type="text/javascript" src="coordenadas.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript" src="cordenadas_norteamerica.js"></script>
+    <script>
 // This example adds an animated symbol to a polyline.
 
 var line;
@@ -70,9 +70,10 @@ var lineArray=[];
 
 function initialize() {
   var mapOptions = {
-    center: new google.maps.LatLng(58.4134304,-75.283542),
+    center: new google.maps.LatLng(68.4134304,60.283542),
     zoom:2.8,
-    minZoom:2.8,
+    minZoom:2.99,
+    maxZoom:8,
     streetViewControl:false,
     panControl:false,
     overviewMapControl:false,
@@ -86,54 +87,29 @@ function initialize() {
 
   var lineCoordinatesArray = [];
 
-  for (var i = coordenadas.length - 1; i >= 0; i--) {
+  for (var i = cordenadas_norteamerica.length - 1; i >= 0; i--) {
     lineCoordinatesArray[i] = [
-      new google.maps.LatLng(coordenadas[i][0],coordenadas[i][1]),new google.maps.LatLng(coordenadas[i][2],coordenadas[i][3])
+      new google.maps.LatLng(cordenadas_norteamerica[i][0],cordenadas_norteamerica[i][1],true),new google.maps.LatLng(cordenadas_norteamerica[i][2],cordenadas_norteamerica[i][3],true)
       
     ];
     
   };
 
-  // var lineCoordinates = [
-  //   new google.maps.LatLng(-3.1372843,-32.9660223),
-  //   new google.maps.LatLng(23.9088854,6.4089788)
-  // ];
-
-  // Define the symbol, using one of the predefined paths ('CIRCLE')
-  // supplied by the Google Maps JavaScript API.
-  // var lineSymbol = {
-  //   path: google.maps.SymbolPath.CIRCLE,
-  //   scale: 8,
-  //   strokeColor: '#393'
-  // };
-  // var lineSymbol2 = {
-  //   path: google.maps.SymbolPath.CIRCLE,
-  //   scale: 5,
-  //   strokeColor: '#393'
-  // };
 
   for (var i = lineCoordinatesArray.length - 1; i >= 0; i--) {
     lineArray[i] = new google.maps.Polyline({
         path: lineCoordinatesArray[i],
         strokeColor: '#4A4A4A',
-        strokeWeight:2.8,
+        strokeWeight:2,
         strokeOpacity:0.4,
         geodesic:true,
         icons: [
-
-        /*var polyOptions = {geodesic:true};
-        var polyline = new GPolyline([
-          new GLatLng(61.1699849, -149.944496),
-          new GLatLng(46.2361, -63.13)
-          ], "#ff0000", 3, 1, polyOptions);
-        map.addOverlay(polyline);*/
-
 
 
           {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
-              scale: coordenadas[i][4]*2,
+              scale: cordenadas_norteamerica[i][4]*3,
               fillOpacity:1,
               strokeOpacity:1,
               strokeColor: '#EB4E4E',
@@ -144,7 +120,7 @@ function initialize() {
           {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
-              scale: coordenadas[i][5]*2,
+              scale: cordenadas_norteamerica[i][5]*3,
               fillOpacity:1,
               strokeOpacity:1,
               fillColor:'#E8A434',
@@ -158,18 +134,6 @@ function initialize() {
   };
 
   // Create the polyline and add the symbol to it via the 'icons' property.
-  // line = new google.maps.Polyline({
-  //   path: lineCoordinates,
-  //   icons: [{
-  //     icon: lineSymbol,
-  //     offset: '100%'
-  //   },
-  //   {
-  //     icon: lineSymbol2,
-  //     offset: '100%'
-  //   }],
-  //   map: map
-  // });
 
   animateCircle();
 }
@@ -179,26 +143,17 @@ function initialize() {
 function animateCircle() {
     var countArray = [];
     var iconsArray = [];
-    for (var i = coordenadas.length - 1; i >= 0; i--) {
+    for (var i = cordenadas_norteamerica.length - 1; i >= 0; i--) {
       countArray[i]=0;
     };
-    // count = 0;
-    window.setInterval(function() {
-      // count = (count + 5) % 200;
-      // var icons = line.get('icons');
-      // icons[0].offset = (count / 2) + '%';
-      for (var i = coordenadas.length - 1; i >= 0; i--) {
+     window.setInterval(function() {
+      for (var i = cordenadas_norteamerica.length - 1; i >= 0; i--) {
         countArray[i] = (countArray[i] + 0.3 ) % 200;
         iconsArray[i] = lineArray[i].get('icons');
         iconsArray[i][0].offset = (countArray[i] / 2) + '%';
         iconsArray[i][1].offset = (100-(countArray[i] / 2)) + '%';
         lineArray[i].set('icons', iconsArray[i]);
-        // lineArray[i].set('icons', icons);
       };
-      // count = (count + 5) % 200;
-      // var icons = line.get('icons');
-      // icons[0].offset = (count / 2) + '%';
-      // line.set('icons', icons);
   }, 20);
 }
 
