--- a/europa.html
+++ b/europa.html
@@ -6,7 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Viajes hacia y desde Chile</title>
+    <title>Europa</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
@@ -167,9 +167,19 @@ google.maps.event.addDomListener(window, 'load', initialize);
     </header>
     <section>
     <p class="explicacion">El tamaño de el circulo en el mapa representa la cantidad de personas que viajan desde el pais de origen por la poblacion total de ese pais<p>  
+    <nav class="navbar">
+      <ul>
+        <li><a href="index.html" title="Mundo">Mundo</a></li>
+        <li><a href="sudamerica.html" title="sudamerica hola">Sudamerica</a></li>
+        <li><a href="norteamerica.html" title="Cursos">Norte y Centro America</a></li>
+        <li><a href="europa.html" title="Cursos">Europa</a></li>
+        <li><a href="africa.html" title="Cursos">Africa y Asia</a></li>
+        <li><a href="oceania.html" title="Cursos">Oceania y Asia</a></li>
+      </ul>
+    </nav> 
     </section>
     <div class="mapa" id="map-canvas"></div>
-    <footer> Los datos utilizados para hacer este grafico son del año 2011
+    <footer> Los datos utilizados para hacer este grafico son del año 2011 y la formula utlizada para el tamaño de los circulos es ((personas que viajan/poblacion total)*500+1)*3
     </footer>
   </body>
 </html>
