--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ function initialize() {
     center: new google.maps.LatLng(58.4134304,-75.283542),
     zoom:2.8,
     minZoom:2.8,
+    maxZoom:8,
     streetViewControl:false,
     panControl:false,
     overviewMapControl:false,
@@ -133,7 +134,7 @@ function initialize() {
           {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
-              scale: coordenadas[i][4]*2,
+              scale: coordenadas[i][4]*3,
               fillOpacity:1,
               strokeOpacity:1,
               strokeColor: '#EB4E4E',
@@ -144,7 +145,7 @@ function initialize() {
           {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
-              scale: coordenadas[i][5]*2,
+              scale: coordenadas[i][5]*3,
               fillOpacity:1,
               strokeOpacity:1,
               fillColor:'#E8A434',
@@ -210,11 +211,23 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <header>
     <h1>Viajes hacia y desde Chile</h1>  
     </header>
-    <section>
+    <section>  
     <p class="explicacion">El tamaño de el circulo en el mapa representa la cantidad de personas que viajan desde el pais de origen por la poblacion total de ese pais<p>  
+    <nav class="navbar">
+      <ul>
+        <li><a href="index.html" title="Mundo">Mundo</a></li>
+        <li><a href="sudamerica.html" title="sudamerica hola">Sudamerica</a></li>
+        <li><a href="norteamerica.html" title="Cursos">Norte y Centro America</a></li>
+        <li><a href="europa.html" title="Cursos">Europa</a></li>
+        <li><a href="africa.html" title="Cursos">Africa y Asia</a></li>
+        <li><a href="oceania.html" title="Cursos">Oceania y Asia</a></li>
+      </ul>
+    </nav> 
     </section>
     <div class="mapa" id="map-canvas"></div>
-    <footer> Los datos utilizados para hacer este grafico son del año 2011
+    <footer> Los datos utilizados para hacer este grafico son del año 2011 
+
+    y la formula utlizada para el tamaño de los circulos es ((personas que viajan/poblacion total)*500+1)*3
     </footer>
   </body>
 </html>
