--- a/oceania.html
+++ b/oceania.html
@@ -6,7 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Norte y Centro America</title>
+    <title>Oseania y Asia</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
@@ -61,7 +61,7 @@
 
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.expsigned_in=true"></script>
-    <script type="text/javascript" src="cordenadas_norteamerica.js"></script>
+    <script type="text/javascript" src="cordenadas_oceania.js"></script>
     <script>
 // This example adds an animated symbol to a polyline.
 
@@ -70,9 +70,9 @@ var lineArray=[];
 
 function initialize() {
   var mapOptions = {
-    center: new google.maps.LatLng(14.7134304,-60.283542),
-    zoom:2.8,
-    minZoom:3,
+    center: new google.maps.LatLng(5.4134304,12.283542),
+    zoom:3,
+    minZoom:2.8,
     maxZoom:8,
     streetViewControl:false,
     panControl:false,
@@ -87,9 +87,9 @@ function initialize() {
 
   var lineCoordinatesArray = [];
 
-  for (var i = cordenadas_norteamerica.length - 1; i >= 0; i--) {
+  for (var i = cordenadas_oceania.length - 1; i >= 0; i--) {
     lineCoordinatesArray[i] = [
-      new google.maps.LatLng(cordenadas_norteamerica[i][0],cordenadas_norteamerica[i][1],true),new google.maps.LatLng(cordenadas_norteamerica[i][2],cordenadas_norteamerica[i][3],true)
+      new google.maps.LatLng(cordenadas_oceania[i][0],cordenadas_oceania[i][1],true),new google.maps.LatLng(cordenadas_oceania[i][2],cordenadas_oceania[i][3],true)
       
     ];
     
@@ -109,7 +109,7 @@ function initialize() {
           {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
-              scale: cordenadas_norteamerica[i][4]*3,
+              scale: cordenadas_oceania[i][4]*5,
               fillOpacity:1,
               strokeOpacity:1,
               strokeColor: '#EB4E4E',
@@ -120,7 +120,7 @@ function initialize() {
           {
             icon: {
               path: google.maps.SymbolPath.CIRCLE,
-              scale: cordenadas_norteamerica[i][5]*3,
+              scale: cordenadas_oceania[i][5]*5,
               fillOpacity:1,
               strokeOpacity:1,
               fillColor:'#E8A434',
@@ -143,11 +143,11 @@ function initialize() {
 function animateCircle() {
     var countArray = [];
     var iconsArray = [];
-    for (var i = cordenadas_norteamerica.length - 1; i >= 0; i--) {
+    for (var i = cordenadas_oceania.length - 1; i >= 0; i--) {
       countArray[i]=0;
     };
      window.setInterval(function() {
-      for (var i = cordenadas_norteamerica.length - 1; i >= 0; i--) {
+      for (var i = cordenadas_oceania.length - 1; i >= 0; i--) {
         countArray[i] = (countArray[i] + 0.3 ) % 200;
         iconsArray[i] = lineArray[i].get('icons');
         iconsArray[i][0].offset = (countArray[i] / 2) + '%';
@@ -176,10 +176,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <li><a href="africa.html" title="Cursos">Africa y Asia</a></li>
         <li><a href="oceania.html" title="Cursos">Oceania y Asia</a></li>
       </ul>
-    </nav>
+    </nav> 
     </section>
     <div class="mapa" id="map-canvas"></div>
-    <footer> Los datos utilizados para hacer este grafico son del año 2011 y la formula utlizada para el tamaño de los circulos es ((personas que viajan/poblacion total)*500+1)*3
+    <footer> Los datos utilizados para hacer este grafico son del año 2011 y la formula utlizada para el tamaño de los circulos es ((personas que viajan/poblacion total)*500+1)*5
     </footer>
   </body>
 </html>
