--- a/index.html
+++ b/index.html
@@ -226,8 +226,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
     </section>
     <div class="mapa" id="map-canvas"></div>
     <footer> Los datos utilizados para hacer este grafico son del año 2011 
-
     y la formula utlizada para el tamaño de los circulos es ((personas que viajan/poblacion total)*500+1)*3
+    </footer>
+    <footer>
+      Algunos paises de sudamerica no estan en el mapa ya que imposibilitaban la vista del grafico por su gran volumen
     </footer>
   </body>
 </html>
