--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <h1>Viajes hacia y desde Chile</h1>  
     </header>
     <section>  
-    <p class="explicacion">El tamaño de el circulo en el mapa representa la cantidad de personas que viajan desde el pais de origen por la poblacion total de ese pais<p>  
+    <p class="explicacion">Los circulo en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
     <nav class="navbar">
       <ul>
         <li><a href="index.html" title="Mundo">Mundo</a></li>
