--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     y la formula utlizada para el tamaño de los circulos es ((personas que viajan/poblacion total)*500+1)*3
     </footer>
     <footer>
-      Algunos paises de sudamerica no estan en el mapa ya que imposibilitaban la vista del grafico por su gran volumen
+      Algunos paises de sudamerica no estan en el mapa ya que imposibilitaban la vista del grafico por su gran tamaño
     </footer>
   </body>
 </html>
