--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang=''>
 <html>
   <head>
     <link href='http://fonts.googleapis.com/css?family=Ultra' 
@@ -6,6 +7,9 @@
     <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="styles.css">
     <title>Viajes hacia y desde Chile</title>
     <style>
       html, body, #map-canvas {
@@ -21,7 +25,7 @@
 
       }
       body{
-        background-color: rgb(74,74,74);
+        background-color: #444444; /*rgb(74,74,74)*/
       }
       h1{
         text-align: center;
@@ -62,9 +66,13 @@
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.expsigned_in=true"></script>
     <script type="text/javascript" src="coordenadas.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="script.js"></script>
     <script type="text/javascript">
-// This example adds an animated symbol to a polyline.
 
+
+// This example adds an animated symbol to a polyline.
+//
 var line;
 var lineArray=[];
 
@@ -95,23 +103,7 @@ function initialize() {
     
   };
 
-  // var lineCoordinates = [
-  //   new google.maps.LatLng(-3.1372843,-32.9660223),
-  //   new google.maps.LatLng(23.9088854,6.4089788)
-  // ];
 
-  // Define the symbol, using one of the predefined paths ('CIRCLE')
-  // supplied by the Google Maps JavaScript API.
-  // var lineSymbol = {
-  //   path: google.maps.SymbolPath.CIRCLE,
-  //   scale: 8,
-  //   strokeColor: '#393'
-  // };
-  // var lineSymbol2 = {
-  //   path: google.maps.SymbolPath.CIRCLE,
-  //   scale: 5,
-  //   strokeColor: '#393'
-  // };
 
   for (var i = lineCoordinatesArray.length - 1; i >= 0; i--) {
     lineArray[i] = new google.maps.Polyline({
@@ -121,14 +113,6 @@ function initialize() {
         strokeOpacity:0.4,
         geodesic:true,
         icons: [
-
-        /*var polyOptions = {geodesic:true};
-        var polyline = new GPolyline([
-          new GLatLng(61.1699849, -149.944496),
-          new GLatLng(46.2361, -63.13)
-          ], "#ff0000", 3, 1, polyOptions);
-        map.addOverlay(polyline);*/
-
 
 
           {
@@ -158,19 +142,7 @@ function initialize() {
       });
   };
 
-  // Create the polyline and add the symbol to it via the 'icons' property.
-  // line = new google.maps.Polyline({
-  //   path: lineCoordinates,
-  //   icons: [{
-  //     icon: lineSymbol,
-  //     offset: '100%'
-  //   },
-  //   {
-  //     icon: lineSymbol2,
-  //     offset: '100%'
-  //   }],
-  //   map: map
-  // });
+
 
   animateCircle();
 }
@@ -183,23 +155,18 @@ function animateCircle() {
     for (var i = coordenadas.length - 1; i >= 0; i--) {
       countArray[i]=0;
     };
-    // count = 0;
+
     window.setInterval(function() {
-      // count = (count + 5) % 200;
-      // var icons = line.get('icons');
-      // icons[0].offset = (count / 2) + '%';
+
       for (var i = coordenadas.length - 1; i >= 0; i--) {
         countArray[i] = (countArray[i] + 0.3 ) % 200;
         iconsArray[i] = lineArray[i].get('icons');
         iconsArray[i][0].offset = (countArray[i] / 2) + '%';
         iconsArray[i][1].offset = (100-(countArray[i] / 2)) + '%';
         lineArray[i].set('icons', iconsArray[i]);
-        // lineArray[i].set('icons', icons);
+
       };
-      // count = (count + 5) % 200;
-      // var icons = line.get('icons');
-      // icons[0].offset = (count / 2) + '%';
-      // line.set('icons', icons);
+
   }, 20);
 }
 
@@ -213,16 +180,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
     </header>
     <section>  
     <p class="explicacion">Los circulo en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
-    <nav class="navbar">
+    <div id='cssmenu'><!-- class="navbar" -->
       <ul>
-        <li><a href="index.html" title="Mundo">Mundo</a></li>
+        <li class='active' ><a href="index.html" title="Mundo">Mundo</a></li>
         <li><a href="sudamerica.html" title="sudamerica hola">Sudamerica</a></li>
         <li><a href="norteamerica.html" title="Cursos">Norte y Centro America</a></li>
         <li><a href="europa.html" title="Cursos">Europa</a></li>
         <li><a href="africa.html" title="Cursos">Africa y Asia</a></li>
         <li><a href="oceania.html" title="Cursos">Oceania y Asia</a></li>
       </ul>
-    </nav> 
+    </div> 
     </section>
     <div class="mapa" id="map-canvas"></div>
     <footer> Los datos utilizados para hacer este grafico son del año 2011 
