--- a/oceania.html
+++ b/oceania.html
@@ -21,7 +21,7 @@
 
       }
       body{
-        background-color: rgb(74,74,74);
+        background-color: #444444;
       }
       h1{
         text-align: center;
