--- a/oceania.html
+++ b/oceania.html
@@ -31,8 +31,8 @@
         margin: 1em 0 0.5em 0;
         color: rgb(241,240,235);
         font-weight: normal;
-        font-family: 'Ultra', serif;   
-        font-size: 36px;
+        font-family: 'Oswald', sans-serif;  
+        font-size: 46px;
         line-height: 42px;
         text-transform: uppercase;
         text-shadow: 0 2px black, 0 3px #777 ;
