--- a/sudamerica.html
+++ b/sudamerica.html
@@ -4,6 +4,7 @@
     <link href='http://fonts.googleapis.com/css?family=Ultra' 
     rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,8 +32,8 @@
         margin: 1em 0 0.5em 0;
         color: rgb(241,240,235);
         font-weight: normal;
-        font-family: 'Ultra', serif;   
-        font-size: 36px;
+        font-family: 'Oswald', sans-serif;   
+        font-size: 46px;
         line-height: 42px;
         text-transform: uppercase;
         text-shadow: 0 2px black, 0 3px #777 ;
