mas margen alfinal de la pagina

--- a/europa.html
+++ b/europa.html
@@ -58,7 +58,9 @@
         color: rgb(220,220,220);
         font-family: 'Orienta', sans-serif;
         margin-left: 12px;
+        padding-bottom: 20px;
         margin-bottom: 10px;
+        padding-bottom: 20px;
       }
 
 
