--- a/africa.html
+++ b/africa.html
@@ -59,6 +59,7 @@
         font-family: 'Orienta', sans-serif;
         margin-left: 12px;
         margin-bottom: 10px;
+        padding-bottom: 20px;
       }
 
 
