--- a/index.html
+++ b/index.html
@@ -45,21 +45,16 @@
         font-size: 22px;
         line-height: 40px;
         font-family: 'Orienta', sans-serif;
-/*        margin: 1em 0 0.5em 0;
-        color: rgb(241,240,235);
-        font-size: 22px;
-        line-height: 40px;
-        font-weight: normal;
-        text-transform: uppercase;
-        font-family: 'Orienta', sans-serif;
-        letter-spacing: 1px;
-        font-style: italic;*/
+
       }
       footer {
         color: rgb(220,220,220);
         font-family: 'Orienta', sans-serif;
         margin-left: 12px;
         margin-bottom: 10px;
+      }
+      .footer2{
+        padding-bottom: 20px;
       }
 
 
@@ -195,7 +190,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <footer> Los datos utilizados para hacer este grafico son del año 2011 
     y la formula utlizada para el tamaño de los circulos es ((personas que viajan/poblacion total)*500+1)*3
     </footer>
-    <footer>
+    <footer class="footer2">
       Algunos paises de sudamerica no estan en el mapa ya que imposibilitaban la vista del grafico por su gran tamaño
     </footer>
   </body>
