--- a/sudamerica.html
+++ b/sudamerica.html
@@ -60,6 +60,7 @@
         font-family: 'Orienta', sans-serif;
         margin-left: 12px;
         margin-bottom: 10px;
+        padding-bottom: 20px;
       }
 
 
