intentantando cambiar letra

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         margin: 1em 0 0.5em 0;
         color: rgb(241,240,235);
         font-weight: normal;
-        font-family: 'Oswald', sans-serif;   
+        font-family: 'bellabo', sans-serif;   /*'Oswald'*/
+        src: url('BELLABOO.eot');
+        url('BELLABOO-Regular.ttf') format('truetype'),  
         font-size: 46px;
         line-height: 42px;
         text-transform: uppercase;
