--- a/europa.html
+++ b/europa.html
@@ -12,8 +12,7 @@
     <title>Europa</title>
     <style>
     @font-face{
-        font-family: 'BELLABOO-Regular';   /*'Oswald'*/
-        /*src: url('BELLABOO.eot');*/;
+        font-family: 'BELLABOO-Regular';  
         src:url('BELLABOO-Regular.ttf') format('opentype'); 
 
       }
