--- a/norteamerica.html
+++ b/norteamerica.html
@@ -12,8 +12,7 @@
     <title>Norte y Centro America</title>
     <style>
     @font-face{
-        font-family: 'BELLABOO-Regular';   /*'Oswald'*/
-        /*src: url('BELLABOO.eot');*/;
+        font-family: 'BELLABOO-Regular'; 
         src:url('BELLABOO-Regular.ttf') format('opentype'); 
 
       }
